stacks/media/sabnzbd/sabnzbd-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd-deployment
  labels:
    app: sabnzbd
spec:
  replicas: 3
  selector:
    matchLabels:
      app: sabnzbd
  template:
    metadata:
      labels:
        app: sabnzbd
    spec:
      containers:
      - name: sabnzbd
        image: linuxserver/sabnzbd:latest
        ports:
        - containerPort: 8080
