stacks/media/sabnzbd/sabnzbd-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: sabnzbd
  # namespace: default
spec:
  ports:
    - port: 8080
      protocol: TCP
      # targetPort: 80
  selector:
    app: sabnzbd
  type: ClusterIP
