stacks/media/sabnzbd/sabnzbd-ingressroute.yaml
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: sabnzbd
  namespace: default
spec:
  entryPoints:
    - websecure
    # - web
  routes:
    - match: Host(`sabnzbd.localhost`)
      kind: Rule
      middlewares:
        - name: headers-default
      services:
        - name: sabnzbd
          namespace: default
          port: 8080
